[project]
name = "database-agent"
version = "0.1.0"
description = "FastMCP tabanl覺 SQLite yard覺mc覺 arac覺"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Enes Gon", email = "enes@example.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "fastmcp>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9",
    "pytest>=8.3.0",
]

[tool.uv]
dev-dependencies = ["ruff>=0.6.9", "pytest>=8.3.0"]

